# Gazzali-Kernel

./: CMakeLists.txt  README.md
arch/: arch.h  cm3.s  i386.s  linker-armcm3.ld
drivers/: stm32f4xx.c  stm32f4xx.h  stm32test.c
drivers/gpio/: stm32-gpio.c
drivers/mmc/: stm32_flash.c
fs/: exec.c  fs.c  initrd.c  romfs.c
include/: Gazzali.h  elf.h  exec.h  fs.h  libc.h  module.h  syscall.h
kernel/: alloc.c  kernel.c  libc.c  sched.c  syscall.c  vga.c
